Ensure text remains visible during webfont load #55

--- a/public/styles/pokeapp.css
+++ b/public/styles/pokeapp.css
@@ -60,6 +60,7 @@ body {
     src: url('/fonts/Rubik-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -67,6 +68,7 @@ body {
     src: url('/fonts/Rubik-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -74,6 +76,7 @@ body {
     src: url('/fonts/Rubik-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
+    font-display: swap;
 }
 
 
